--- a/deployment-prod.yaml
+++ b/deployment-prod.yaml
@@ -14,7 +14,7 @@ spec:
     spec:
       containers:
       - name: nginx
-        image: cithit/hendris3:latest                             #<----change this!
+        image: cithit/mosinsmj-225:latest                             #<----change this!
         ports:
         - containerPort: 80  # Expose NGINX on port 80      
 ---
